[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-runtime"
version = "0.2.0"
description = "Meta-package: the urirun URI-execution kernel (registry/runtime/v2/executors/worker). The `urirun_runtime` import package now ships inside the `urirun` distribution (the single source of truth); this distribution just depends on it so `pip install urirun-runtime` and `import urirun_runtime` keep working."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
# Meta-package: ships NO import package of its own (the bundled `urirun` owns `urirun_runtime`),
# so installing this alongside `urirun` cannot shadow the bundle copy.
dependencies = [
  "urirun>=0.4.186",
]

[project.optional-dependencies]
grpc = ["grpcio>=1.60"]      # urirun_runtime.v2_grpc transport (lazy import)
yaml = ["pyyaml>=6"]         # YAML manifests / `tree --format yaml` (lazy import)
keyring = ["keyring>=24"]    # secret:// keyring backend (lazy import)

[tool.setuptools]
packages = []                # meta-package — no import package shipped
